--- a/src/page/cards/Card.css
+++ b/src/page/cards/Card.css
@@ -13,7 +13,7 @@
 .card-container{
     height: 400px;
     width: 300px;
-    margin: 50px;
+    margin: 40px;
     border-radius: 8px;
     background-color: burlywood;
 }
@@ -50,7 +50,7 @@
     margin-top: 10px;
     padding: 10px 20px;
     font-size: large;
-    font-weight: bolder;
+    font-weight: bold;
     color: white;
     background-color: royalblue;
     border: 0;
