change some style

--- a/src/miniProject/assignment2/style2.css
+++ b/src/miniProject/assignment2/style2.css
@@ -42,7 +42,7 @@
     border-radius: var(--border-radius);
   }
   
-  .btn {
+  .btn2 {
     border: none;
     padding: 0.1rem 0.6rem;
     border-radius: var(--border-radius);
@@ -50,14 +50,15 @@
     transition: all 0.3s;
     margin: 0 0.2rem;
     color: rgb(195, 154, 77);
+    cursor: pointer;
   }
   
-  .btn:hover {
+  .btn2:hover {
     background-color: orange;
     color: black;
   }
   
-  .btn:disabled {
+  .btn2:disabled {
     background-color: red;
   }
   
