--- a/src/page/todoApp/Todo.css
+++ b/src/page/todoApp/Todo.css
@@ -12,8 +12,10 @@
     background-color: #111;
 }
 
-.btn{
+.delete-btn{
     cursor: pointer;
     color: red;
-    
+    padding: 5px;
+    font-weight: 600;
+    font-size: 1.2rem;
 }
