--- a/src/page/todoApp/Todos.css
+++ b/src/page/todoApp/Todos.css
@@ -5,5 +5,6 @@
     border-radius: 0.6rem;
     padding: 0.5rem;
     height: 60vh;
-    overflow: hidden;
+    overflow: scroll;
+    overflow-x: hidden;
 }
