basic todo app complete

--- a/src/page/todoApp/Todo.css
+++ b/src/page/todoApp/Todo.css
@@ -12,6 +12,14 @@
     background-color: #111;
 }
 
+.todo-info{
+    display: flex;
+}
+
+.todo-info h3{
+    margin-right: 20px;
+}
+
 .delete-btn{
     cursor: pointer;
     color: red;
