--- a/src/miniProject/assignment3/style3.css
+++ b/src/miniProject/assignment3/style3.css
@@ -13,12 +13,12 @@
     background-color: #4c4c4c;
   }
   
-  /* textarea {
+  .textarea {
     resize: none;
     height: 5rem;
-  } */
+  }
   
-  /* .btn {
+  .task-btn {
     border: none;
     padding: 0.2rem;
     border-radius: 0.6rem;
@@ -28,34 +28,34 @@
     padding: 0.5rem 0;
   }
   
-  .btn:hover {
+  .task-btn:hover {
     background-color: orange;
     color: black;
-  } */
-/*   
-  .container {
+  }
+  
+  .task-container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-  } */
+  }
   
-  /* .title {
+  .task-title {
     text-align: center;
     margin: 1rem 0;
     color: white;
     font-size: 2rem;
-  } */
+  }
   
-  /* .card {
+  .card {
     background-color: #2c2c2c;
     padding: 1rem;
     border-radius: 0.6rem;
     width: 25rem;
     max-width: 100%;
-  } */
+  }
   
-  /* form {
+  form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -65,7 +65,7 @@
   .field-group {
     display: flex;
     flex-direction: column;
-  } */
+  } 
   
   .task-todos {
     display: grid;
