--- a/src/miniProject/assignment4/style4.css
+++ b/src/miniProject/assignment4/style4.css
@@ -1,4 +1,4 @@
-  .assignment3 {
+.assignment4 {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
@@ -8,68 +8,28 @@
     background-color: #4c4c4c;
   }
   
-  .textarea {
-    resize: none;
-    height: 5rem;
-  }
-  
-  .task-btn {
-    border: none;
-    padding: 0.2rem;
-    border-radius: 0.6rem;
-    transition: all 0.3s;
-    background-color: #4c4c4c;
-    color: white;
-    padding: 0.5rem 0;
-  }
-  
-  .task-btn:hover {
-    background-color: orange;
-    color: black;
-  }
-  
-  .task-container {
+  .container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
   }
   
-  .task-title {
+  .title {
     text-align: center;
     margin: 1rem 0;
     color: white;
     font-size: 2rem;
   }
   
-  .card {
-    background-color: #2c2c2c;
-    padding: 1rem;
-    border-radius: 0.6rem;
-    width: 25rem;
-    max-width: 100%;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    color: white;
-    font-family: fantasy;
-  }
-  .field-group {
-    display: flex;
-    flex-direction: column;
-  } 
-  
-  .task-todos {
+  .users {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     padding: 1rem;
     color: white;
     gap: 1rem;
   }
-  .task-todo {
+  .user {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -77,27 +37,34 @@
     color: white;
     padding: 0.6rem;
     border-radius: 0.6rem;
+    transition: all 0.3s;
   }
-  .todo-title {
+  .user:hover {
+    background-color: black;
+  }
+  .user__name {
     color: yellow;
-    /* font-family: fantasy; */
-    display: flex;
-    justify-content: space-between;
+  }
+  .user__phone {
+    color: white;
+  }
+  .user__phone:hover {
+    text-decoration: underline;
   }
   @media screen and (max-width: 992px) {
-    .task-todos {
+    .users {
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   @media screen and (max-width: 768px) {
-    .task-todos {
+    .users {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
   @media screen and (max-width: 600px) {
-    .task-todos {
+    .users {
+      width: 100%;
       grid-template-columns: repeat(1, minmax(0, 1fr));
     }
   }
-  
   
